--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                          <a href="./index.html">Home</a>
                      </li>
                      <li class="sobre">
-                        <a href="#sobreNos">Sobre Nós</a> 
+                        <a href="#sobreNos">Cozinheiros</a> 
                      </li>
                      <li class="Receitas">
                         <a href="#secaoReceitas">Receitas</a> 
