--- a/html/receita1.html
+++ b/html/receita1.html
@@ -58,6 +58,10 @@
         <h2>Modo de Preparo</h2>
         <p>Em uma panela, em fogo médio, aqueça o óleo e refogue a cebola e o alho até dourarem. Adicione o frango, refogue até que esteja dourado e tempere com MAGGI MEU SEGREDO e pimenta. Misture o ketchup, a mostarda e o creme de Leite ao frango e deixe cozinhar por alguns minutos. Sirva.</p>
     </section>
+    <section>
+        <div id="efeitoSonoro"><audio src="../assets/video-audio/efeitosonoroHUMM.m4a" controls autoplay></audio></div>
+    </section>
+    
 
 </body>
 </html>
