--- a/html/receita2.html
+++ b/html/receita2.html
@@ -57,6 +57,9 @@
         <h2>Modo de Preparo</h2>
         <p>Corte as abobrinhas em rodelas com cerca de um centímetros de espessura. Coloque as fatias em uma assadeira e despeje o molho de tomate, o orégano e os queijos por cima. Leve a assadeira ao forno preaquecido a 250ºC e deixe assar por cinco minutos ou até que os queijos estejam derretidos. Depois é só cortar e servir.</p>
     </section>
+    <section>
+        <div id="efeitoSonoro"><audio src="../assets/video-audio/efeitosonoroHUMM.m4a" controls autoplay></audio></div>
+    </section>
 
 </body>
 </html>
