--- a/html/receita3.html
+++ b/html/receita3.html
@@ -57,6 +57,9 @@
         <h2>Modo de Preparo</h2>
         <p>Descasque e corte as batatas em cubos. Cozinhe em água fervente com sal até que fiquem macias. Escorra a água e amasse as batatas. Em uma panela, derreta a manteiga e adicione o purê de batatas e o leite. Misture bem até obter uma consistência cremosa. Tempere com sal e noz-moscada a gosto.</p>
     </section>
+    <section>
+        <div id="efeitoSonoro"><audio src="../assets/video-audio/efeitosonoroHUMM.m4a" controls autoplay></audio></div>
+    </section>
 
 </body>
 
