--- a/html/receita4.html
+++ b/html/receita4.html
@@ -60,7 +60,9 @@
         <h2>Modo de Preparo</h2>
         <p>Lave o feijão e deixe de molho em água por cerca de 8 horas. Escorra e coloque o feijão em uma panela de pressão com água suficiente para cobrir. Adicione a carne seca e a costela de porco. Cozinhe por cerca de 40 minutos após pegar pressão. Em uma panela separada, frite o paio e a linguiça calabresa até dourarem. Adicione a cebola e o alho e refogue. Acrescente o feijão cozido com a carne e as folhas de louro. Cozinhe em fogo baixo por mais 30 minutos. Tempere com sal a gosto.</p>
     </section>
-
+    <section>
+        <div id="efeitoSonoro"><audio src="../assets/video-audio/efeitosonoroHUMM.m4a" controls autoplay></audio></div>
+    </section>
 </body>
 
 
