--- a/html/receita5.html
+++ b/html/receita5.html
@@ -56,6 +56,9 @@
         <h2>Modo de Preparo</h2>
         <p>Coloque no liquidificador o creme de leite e o leite condensado.Bata um pouco e depois vá acrescentando o suco do limão, aos poucos.Ele vai ficar bem consistente, leve à geladeira.</p>
     </section>
+    <section>
+        <div id="efeitoSonoro"><audio src="../assets/video-audio/efeitosonoroHUMM.m4a" controls autoplay></audio></div>
+    </section>
 
 </body>
 </html>
