--- a/html/receita6.html
+++ b/html/receita6.html
@@ -57,6 +57,9 @@
         <h2>Modo de Preparo</h2>
         <p>Derreta o chocolate e a manteiga, depois misture com os ovos e o açúcar. Adicione a farinha e o fermento. Asse em forno pré-aquecido a 180°C por 30 minutos.</p>
     </section>
+    <section>
+        <div id="efeitoSonoro"><audio src="../assets/video-audio/efeitosonoroHUMM.m4a" controls autoplay></audio></div>
+    </section>
 
 </body>
 </html>
