--- a/html/receita7.html
+++ b/html/receita7.html
@@ -59,7 +59,9 @@
         <h2>Modo de Preparo</h2>
         <p>Em uma caneca grande, misture a farinha de trigo, o açúcar e o chocolate em pó. Adicione o leite, o óleo e o ovo. Mexa bem até obter uma massa homogênea. Adicione o fermento em pó e misture delicadamente. Leve ao micro-ondas por 2-3 minutos, ou até que o bolo esteja completamente assado. Deixe esfriar um pouco antes de servir.</p>
     </section>
-
+    <section>
+        <div id="efeitoSonoro"><audio src="../assets/video-audio/efeitosonoroHUMM.m4a" controls autoplay></audio></div>
+    </section>
 </body>
 
 </body>
