--- a/html/receita8.html
+++ b/html/receita8.html
@@ -65,6 +65,9 @@
         <h2>Modo de Preparo</h2>
         <p>Em um recipiente, misture bem todos os ingredientes.Em uma assadeira, com o auxílio de um aro (8 cm de diâmetro), modele os hambúrgueres e asse em forno médio (180°C), preaquecido, por cerca de 30 minutos, virando na metade do tempo. Sirva.</p>
     </section>
+    <section>
+        <div id="efeitoSonoro"><audio src="../assets/video-audio/efeitosonoroHUMM.m4a" controls autoplay></audio></div>
+    </section>
 
 </body>
 </html>
