--- a/html/receita5.html
+++ b/html/receita5.html
@@ -19,7 +19,7 @@
                          <a href="../index.html">Home</a>
                      </li>
                      <li class="sobre">
-                        <a href="../index.html#sobreNos">Sobre Nós</a> 
+                        <a href="../index.html#sobreNos">Cozinheiros</a> 
                      </li>
                      <li class="Receitas">
                         <a href="../index.html#secaoReceitas">Receitas</a> 
