criando o relatorio do projeto e o readme

--- a/html/receita2.html
+++ b/html/receita2.html
@@ -60,6 +60,13 @@
     <section>
         <div id="efeitoSonoro"><audio src="../assets/video-audio/efeitosonoroHUMM.m4a" controls autoplay></audio></div>
     </section>
+    <footer>
+        <p>© 2024 Sua Empresa. Todos os direitos reservados.</p>
+        <p>Endereço: Rua Exemplo, 123, Cidade, Estado, País</p>
+        <p>Email: contato@suaempresa.com | Telefone: (00) 12345-6789</p>
+        <p>Aviso Legal | Política de Privacidade | Termos e Condições</p>
+    </footer>
+
 
 </body>
 </html>
